--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -11,4 +11,6 @@ $path: "/Content/_assets/img/";
 $warning-colour: #2b8cc4;
 
 @import "_govuk-elements";
+
 @import "_form-warnings";
+@import "_forms";
