--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/styles.css
@@ -8,8 +8,17 @@
 .no-margins {
   margin: 0 !important; }
 
+.sfa-pull-right {
+  float: right; }
+
+.sfa-medium-top-margin {
+  margin-top: 10px !important; }
+
 .sfa-medium-bottom-margin {
   margin-bottom: 10px !important; }
+
+.sfa-medium-right-margin {
+  margin-right: 10px !important; }
 
 .sfa-large-bottom-margin {
   margin-bottom: 15px !important; }
@@ -19,6 +28,9 @@
 
 .sfa-xlarge-top-margin {
   margin-top: 30px !important; }
+
+.sfa-small-top-padding {
+  padding-top: 5px !important; }
 
 .sfa-medium-bottom-padding {
   padding-bottom: 10px !important; }
@@ -59,6 +71,9 @@ iframe, object, embed {
     text-decoration: none !important; }
   .data p {
     text-decoration: underline; }
+
+.secondary-text {
+  color: #6f777b; }
 
 .button-link {
   font-family: "nta",Arial,sans-serif;
@@ -206,6 +221,12 @@ a[rel="external"]:after {
   margin-top: 1px;
   margin-right: -1px;
   width: 20px; }
+
+.summary-style.open:before {
+  content: '▼ '; }
+
+.toggle-content {
+  display: none; }
 
 .select2-container {
   position: relative !important; }
@@ -1901,9 +1922,9 @@ textarea {
   font-size: 16px;
   line-height: 1.25;
   width: 100%;
-  padding: 4px;
-  background-color: #fff;
-  border: 2px solid #6f777b; }
+  padding: 5px 4px 4px;
+  background-color: transparent;
+  border: 2px solid; }
   @media (min-width: 641px) {
     .form-control {
       font-size: 19px;
@@ -1972,24 +1993,87 @@ textarea.form-control {
   float: none;
   clear: left;
   position: relative;
-  background: #dee0e2;
-  border: 1px solid #dee0e2;
-  padding: 18px 30px 15px 54px;
+  padding: 8px 10px 9px 50px;
   margin-bottom: 10px;
   cursor: pointer; }
   @media (min-width: 641px) {
     .block-label {
-      float: left; } }
+      float: left;
+      padding-top: 7px;
+      padding-bottom: 7px; } }
   .block-label input {
     position: absolute;
-    top: 15px;
-    left: 15px;
     cursor: pointer;
-    margin: 0;
-    width: 29px;
-    height: 29px; }
-  .block-label:hover {
-    border-color: #0b0c0c; }
+    left: 0;
+    top: 0;
+    width: 38px;
+    height: 38px; }
+    .js-enabled .block-label input {
+      margin: 0;
+      zoom: 1;
+      filter: alpha(opacity=0);
+      opacity: 0; }
+  .js-enabled .block-label.selection-button-radio::before {
+    content: "";
+    border: 2px solid;
+    background: transparent;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%; }
+  .js-enabled .block-label.selection-button-radio::after {
+    content: "";
+    border: 10px solid;
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 9px;
+    left: 9px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    zoom: 1;
+    filter: alpha(opacity=0);
+    opacity: 0; }
+  .js-enabled .block-label.selection-button-checkbox::before {
+    content: "";
+    border: 2px solid;
+    background: transparent;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .js-enabled .block-label.selection-button-checkbox::after {
+    content: "";
+    border: solid;
+    border-width: 0 0 5px 5px;
+    background: transparent;
+    width: 17px;
+    height: 7px;
+    position: absolute;
+    top: 10px;
+    left: 8px;
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    zoom: 1;
+    filter: alpha(opacity=0);
+    opacity: 0; }
+  .js-enabled .block-label.selection-button-radio.focused::before, .js-enabled .block-label.selection-button-checkbox.focused::before {
+    -webkit-box-shadow: 0 0 0 5px #ffbf47;
+    -moz-box-shadow: 0 0 0 5px #ffbf47;
+    box-shadow: 0 0 0 5px #ffbf47; }
+  .js-enabled .block-label.selection-button-radio.selected::after, .js-enabled .block-label.selection-button-checkbox.selected::after {
+    zoom: 1;
+    filter: alpha(opacity=100);
+    opacity: 1; }
   .block-label:last-child, .block-label:last-of-type {
     margin-bottom: 0; }
 
@@ -1998,17 +2082,7 @@ textarea.form-control {
   @media (min-width: 641px) {
     .inline .block-label {
       margin-bottom: 0;
-      margin-right: 10px; } }
-
-.js-enabled label.selected {
-  background: #fff;
-  border-color: #0b0c0c; }
-
-.js-enabled label.focused {
-  outline: 3px solid #ffbf47; }
-
-.js-enabled .focused input:focus {
-  outline: none; }
+      margin-right: 30px; } }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -2278,3 +2352,13 @@ input[type=number] {
       color: #2b8cc4;
       font-weight: bold;
       text-decoration: underline; }
+
+.form-control-4-4 {
+  width: 100%; }
+
+.form-control-auto {
+  width: auto; }
+
+@media (min-width: 641px) {
+  .form-control-4-4 {
+    width: 100%; } }
