--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/WhatHappensNext.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/WhatHappensNext.cshtml
@@ -13,7 +13,7 @@
     </ul>
 </div>
 <div class="success-banner" role="alert" aria-live="assertive">
-    <h1 class="heading-large no-btm-margin"><i class="fa fa-check"></i>Apprenticeship application submitted</h1>
+    <h1 class="heading-large sfa-no-bottom-margin"><i class="fa fa-check"></i>Apprenticeship application submitted</h1>
 </div>
 <section class="section-border">
     <div class="text">
