--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
@@ -83,8 +83,8 @@
 }
 
 <div class="search-results-wrapper grid-row">
-    <div class="hgroup">
-        <h1 class="heading-xlarge">Search results</h1>
+    <div class="hgroup column-full">
+        <h1 class="heading-xlarge sfa-no-bottom-margin">Search results</h1>
         <div id="vacancy-result-summary">
             <p id="result-message" class="small-btm-margin">@Html.Raw(resultMessage)</p>
             <p id="national-results-message" class="">@Html.Raw(nationalResultsMessage)</p>
