--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Feedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Feedback.cshtml
@@ -7,7 +7,7 @@
 
 <div class="hgroup">
     <h1 class="heading-xlarge">Give feedback</h1>
-    <p class="no-btm-margin">Please leave your suggestions or comments about our service.</p>
+    <p class="sfa-no-bottom-margin">Please leave your suggestions or comments about our service.</p>
     <p>If you're looking for help then <a href="@Url.RouteUrl(CandidateRouteNames.Helpdesk)">contact us</a> instead.</p>
 </div>
 
