--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Results.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Results.cshtml
@@ -12,8 +12,8 @@
 }
 
 <div class="search-results-wrapper grid-row">
-    <div class="hgroup">
-        <h1 class="heading-xlarge">Search results</h1>
+    <div class="hgroup column-full">
+        <h1 class="heading-xlarge sfa-no-bottom-margin">Search results</h1>
         <div id="vacancy-result-summary">
             <p class="small-btm-margin">We've found <b id="total-hits-count" class="bold-medium">@Model.TotalHits</b> traineeships in your selected area.</p>
         </div>
