--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
@@ -55,7 +55,7 @@ else
                         <p class="@vacancy.Description.GetPreserveFormattingCssClass()">@vacancy.Description</p>
                         <div class="grid-row">
                             <div class="column-two-thirds">
-                                <ul class="list-text no-btm-margin">
+                                <ul class="list-text sfa-no-bottom-margin">
                                     <li>
                                         <b>Distance:</b> <span class="distance-value">@vacancy.DistanceAsString</span> miles<span class="summary-style fake-link hide-nojs journey-trigger">Journey time</span>
                                         <div class="detail-content toggle-content hide-nojs">
