--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -12,6 +12,10 @@
     margin: 0 !important;
 }
 
+.sfa-no-bottom-margin {
+    margin-bottom: 0 !important;
+}
+
 .sfa-pull-right {
     float: right;
 }
