--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
@@ -64,7 +64,7 @@
         {
             <div class="form-group column-1-2 scrolling-panel max-height-15">
                 <div class="tabbed-element tab1 active form-control-3-4 beepboop">
-                    <table class="no-btm-margin">
+                    <table class="sfa-no-bottom-margin">
                         <colgroup>
                             <col class="t70">
                             <col class="t30">
@@ -104,7 +104,7 @@
             <div class="form-group">
                 <a name="locationaddresses"></a>
                 <div class="tabbed-element tab1 active form-control-3-4 beepboop">
-                    <table class="no-btm-margin grid-3-4">
+                    <table class="sfa-no-bottom-margin grid-3-4">
                         <colgroup>
                             <col class="t50">
                             <col class="t30">
