--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/BulkDeclineCandidates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/BulkDeclineCandidates.cshtml
@@ -48,7 +48,7 @@
             </div>
         </section>
         <section class="grid-row">
-            <section class="no-btm-margin" id="applicationsSection">
+            <section class="sfa-no-bottom-margin" id="applicationsSection">
                 @{
                     var filterType = Model.VacancyApplicationsSearch.FilterType;
                 }
