--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
@@ -27,7 +27,7 @@
             </div>
         </section>
 
-        <section class="no-btm-margin" id="applicationsSection">
+        <section class="sfa-no-bottom-margin" id="applicationsSection">
 
             <section class="grid-row">
                 <ul class="applications-summary">
