--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
@@ -27,7 +27,7 @@
     </details>
 </section>
 
-<section class="no-btm-margin" id="applicationsSection">
+<section class="sfa-no-bottom-margin" id="applicationsSection">
     <table class="vert-top" id="applicationTable">
         <colgroup>
             <col>
