--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_savedSearches.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_savedSearches.cshtml
@@ -25,14 +25,14 @@
                     
                     @if (savedSearch.ApprenticeshipLevel != "All")
                     {
-                        <p class="font-xsmall no-btm-margin">
+                        <p class="font-xsmall sfa-no-bottom-margin">
                             <b>Apprenticeship level:</b> <span id="saved-search-apprenticeship-level-@savedSearch.Id">@savedSearch.ApprenticeshipLevel</span>
                         </p>
                     }
                     
                     @if (!string.IsNullOrWhiteSpace(savedSearch.SubCategoriesFullNames))
                     {
-                        <p class="font-xsmall no-btm-margin">
+                        <p class="font-xsmall sfa-no-bottom-margin">
                             <b>Sub-categories:</b> <span id="saved-search-subcategories-@savedSearch.Id">@savedSearch.SubCategoriesFullNames</span>
                         </p>
                     }
