--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/_trainingCoursesJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/_trainingCoursesJS.cshtml
@@ -29,24 +29,24 @@
                         <input type="text" class="form-control" id="training-history-course-title" data-bind="value: title" maxlength="50">
                     </div>
                     <div class="form-group inline-fixed validation-message-parent">
-                        <div class="form-group error-wrapper vert-align-top no-btm-margin">
+                        <div class="form-group error-wrapper vert-align-top sfa-no-bottom-margin">
                             <label for="training-history-from-month" class="form-label-bold">From</label>
-                            <div class="form-group form-group-compound no-btm-margin">
+                            <div class="form-group form-group-compound sfa-no-bottom-margin">
                                 <span class="form-hint">Month</span>
                                 <select class="form-control" id="training-history-from-month" data-bind="options: months, optionsText: 'monthName', optionsValue: 'monthNumber', value: fromMonth"></select>
                             </div>
-                            <div class="form-group no-btm-margin" data-bind="parentvalElement: fromYear">
+                            <div class="form-group sfa-no-bottom-margin" data-bind="parentvalElement: fromYear">
                                 <label for="training-history-from-year" class="form-hint">Year</label>
                                 <input type="tel" class="form-control form-control-small" pattern="[0-9]*" maxlength="4" id="training-history-from-year" data-bind="value: fromYear">
                             </div>
                         </div>
-                        <div class="form-group error-wrapper vert-align-top no-btm-margin">
+                        <div class="form-group error-wrapper vert-align-top sfa-no-bottom-margin">
                             <label for="training-history-to-month" class="form-label-bold">To</label>
-                            <div class="form-group form-group-compound no-btm-margin">
+                            <div class="form-group form-group-compound sfa-no-bottom-margin">
                                 <span class="form-hint">Month</span>
                                 <select class="form-control" id="training-history-to-month" data-bind="options: months, optionsText: 'monthName', optionsValue: 'monthNumber', value: toMonth"></select>
                             </div>
-                            <div class="form-group form-group-compound no-btm-margin" data-bind="parentvalElement: toYear">
+                            <div class="form-group form-group-compound sfa-no-bottom-margin" data-bind="parentvalElement: toYear">
                                 <label for="training-history-to-year" class="form-hint">Year</label>
                                 <input type="tel" class="form-control form-control-small" pattern="[0-9]*" maxlength="4"
                                        id="training-history-to-year" data-bind="value: toYear" />
