--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_Apply.cshtml
@@ -8,7 +8,7 @@
 
 @if (@Model.ApplyViaEmployerWebsite)
 {
-    <p class="no-btm-margin">This traineeship requires you to apply through the employer's website.</p>
+    <p class="sfa-no-bottom-margin">This traineeship requires you to apply through the employer's website.</p>
 
     if (Model.IsWellFormedVacancyUrl)
     {
@@ -23,7 +23,7 @@ else if (Request.IsAuthenticated)
 {
     if (Model.DateApplied.HasValue)
     {
-        <p id="date-applied" class="no-btm-margin">You applied on @Html.DisplayFor(m => m.DateApplied, "Date").</p>
+        <p id="date-applied" class="sfa-no-bottom-margin">You applied on @Html.DisplayFor(m => m.DateApplied, "Date").</p>
         <p>@Html.RouteLink("View application", CandidateRouteNames.TraineeshipView, new { id = Model.Id }, new { @id = "view-application-link" })</p>
     }
     else if (Model.VacancyStatus == VacancyStatuses.Live)
