--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchUpdate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchUpdate.cshtml
@@ -35,7 +35,7 @@
                     @Html.DropDownListFor(m => m.WithinDistance, Model.Distances, new { @id = "loc-within", @name = "WithinDistance", @class = "form-control" })
                 </div>
                 <div class="form-group">
-                    <button class="button no-btm-margin" id="search-button" name="SearchAction" value="Search">Update results</button>
+                    <button class="button sfa-no-bottom-margin" id="search-button" name="SearchAction" value="Search">Update results</button>
                 </div>
                 <div class="form-group map-container hide-nojs">
                     <div id="map-canvas" style="width: 100%; height: 250px"></div>
