--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/SentDecisionConfirmation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/SentDecisionConfirmation.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="success-banner" role="alert" aria-live="assertive">
-    <h1 class="heading-large no-btm-margin">
+    <h1 class="heading-large sfa-no-bottom-margin">
         <i class="fa fa-check"></i>
         @(ApplicationViewModelMessages.BulkUnsuccessfulDecisionFormat + Model.SelectedApplicationIds.Count() + " candidates")
     </h1>
