--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/SentDecisionConfirmation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/SentDecisionConfirmation.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="success-banner" role="alert" aria-live="assertive">
-    <h1 class="heading-large no-btm-margin">
+    <h1 class="heading-large sfa-no-bottom-margin">
         <i class="fa fa-check"></i>        
         @Model.CustomMessage
     </h1>
