--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -9,7 +9,7 @@
 }
 
 <div class="success-banner">
-    <h1 class="heading-large no-btm-margin">
+    <h1 class="heading-large sfa-no-bottom-margin">
         <i class="fa fa-check"></i>
         @if (Model.Resubmitted)
         {
